gateway/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /app1/hello
        pathType: Exact
        backend:
          service:
            name: priyankalearnings
            port:
              number: 8080
      # - path: /static/
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: productpage
      #       port:
      #         number: 9080
      # - path: /login
      #   pathType: Exact
      #   backend:
      #     service:
      #       name: productpage
      #       port:
      #         number: 9080
      # - path: /logout
      #   pathType: Exact
      #   backend:
      #     service:
      #       name: productpage
      #       port:
      #         number: 9080
      # - path: /api/v1/products
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: productpage
      #       port:
      #         number: 9080
